tests/vertical-slice/accept/payload_enum_equality.hew
enum Shape {
    Circle(i64);
    Empty;
}

fn main() {
    let a: Shape = Shape::Circle(1);
    let b: Shape = Shape::Circle(1);
    let c: Shape = Shape::Empty;

    println(a == b);
    println(a == c);
}
